--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"nodemon"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,9 @@
   "homepage": "https://github.com/RogesFrederic/projetNodeJs#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "sequelize": "^6.6.2"
+    "nodemon": "^2.0.7",
+    "save-dev": "*",
+    "sequelize": "^6.6.2",
+    "sqlite3": "^5.0.2"
   }
 }
