--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon"
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/RogesFrederic/projetNodeJs#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-json-validator-middleware": "^2.1.1",
     "nodemon": "^2.0.7",
     "save-dev": "*",
     "sequelize": "^6.6.2",
