--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/RogesFrederic/projetNodeJs#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-json-validator-middleware": "^2.1.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "save-dev": "*",
     "sequelize": "^6.6.2",
