--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/RogesFrederic/projetNodeJs#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "express-json-validator-middleware": "^2.1.1",
     "nodemon": "^2.0.7",
